--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 120rem;
+    max-width: 125rem;
     margin: 8rem auto;
     background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
@@ -8,7 +8,12 @@
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     height: 7rem;
+    font-size: 1.4rem;
     background-color: #fff;
     border-bottom: var(--color-grey-light-2);
 }
