--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -15,7 +15,7 @@
     height: 7rem;
     font-size: 1.4rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-2);
+    border-bottom: 1px solid var(--color-grey-light-2);
 }
 
 .content {
@@ -33,6 +33,5 @@
 .hotel-view {
     background-color: #fff;
     flex-grow: 1;
-    background-color: orange;
     height: 80rem;
 }
