--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,7 +12,10 @@
     --color-grey-dark-1: #777;
     --color-grey-dark-2: #999;
 
+    --shadow: 0 2rem 5rem rgba(0,0,0,.06);
     --shadow-dark: 0 2rem 6rem rgba(0,0,0,0.3);
+
+    --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
