--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -261,9 +261,18 @@
         background-color: transparent;
         transition: .2s;
 
+        & span {
+            margin-left: .3rem;
+            transition: margin-left .2s;
+        }
+
         &:hover {
             color: var(--color-grey-dark-1);
             cursor: pointer;
+
+            span {
+                margin-left: 8px;
+            }
         }
 
         &:focus {
@@ -303,6 +312,7 @@
             mask-image: url(../img/chevron-thin-right.svg);
             -webkit-mask-image: url(../img/chevron-thin-right.svg);
             -webkit-mask-size: cover;
+            mask-size: cover;
         }
     }
 
@@ -393,4 +403,63 @@
         font-family: sans-serif;
         z-index: 1;
     }
+}
+
+
+// Cta
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+    position: relative;
+
+    &__book-now {
+        text-transform: uppercase;
+        font-size: 1.5rem;
+        font-weight: 300;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.btn {
+    font-size: 1.5rem;
+    border: none;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary));
+    color: #fff;
+    overflow: hidden;
+    position: relative;
+
+    & > * {
+        transition: all .2s;
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+    }
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem 0;
+        transition: all .2s;
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary));
+    }
+
+    &:hover &__visible {
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible {
+        top: 0;
+    }
+   
 }
