--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,6 +11,12 @@
         align-items: center;
         justify-content: center;
 
+        @media only screen and (max-width: $bp-small) {
+            order: 1;
+            flex: 0 0 100%;
+            background-color: var( --color-grey-light-2);
+        }
+
         &__input {
             width: 90%;
             font-family: inherit;
@@ -118,11 +124,24 @@
         list-style-type: none;
         margin-top: 3.5rem;
 
+        @media only screen and (max-width: $bp-medium) {
+            display: flex;
+            margin: 0;
+        }
+
         &__item {
             position: relative;
             
             &:not(:last-child) {
                 margin-bottom: .5rem;
+
+                @media only screen and (max-width: $bp-medium) {
+                    margin: 0;
+                }
+            }
+
+            @media only screen and (max-width: $bp-medium) {
+                flex: 1;
             }
         }
 
@@ -162,6 +181,16 @@
 
             display: flex;
             align-items: center;
+
+            @media only screen and (max-width: $bp-medium) {
+                justify-content: center;
+                padding: 2rem;
+            }
+
+            @media only screen and (max-width: $bp-small) {
+                flex-direction: column;
+                padding: 1.5rem .5rem;
+            }
         }
 
         &__icon {
@@ -169,7 +198,15 @@
             height: 1.75rem;
             margin-right: 2rem;
             fill: currentColor;
+
+            @media only screen and (max-width: $bp-small) {
+                margin-right: 0;
+                margin-bottom: .7rem;
+                width: 1.5rem;
+                height: 1.5rem;
+            }
         }
+
     }
 
     // legal text
@@ -178,6 +215,10 @@
         text-align: center;
         padding: 2.5rem;
         color: var(--color-grey-light-4);
+
+        @media only screen and (max-width: $bp-medium) {
+            display: none;  
+        }
     }
 
     // gallery
@@ -202,6 +243,11 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             padding: 1.5rem 3rem;
+
+            @media only screen and (max-width: $bp-small) {
+                font-size: 1.8rem;
+                padding: 1.25rem 2rem;
+            }
         }
 
         &__stars {
@@ -236,17 +282,30 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
+
+            @media only screen and (max-width: $bp-small) {
+                padding: 0 1.5rem;
+            }
         }
 
         &__rating-average {
             font-size: 2.25rem;
             font-weight: 300;
             margin-bottom: -3px;
+
+            @media only screen and (max-width: $bp-small) {
+                font-size: 1.8rem;
+
+            }
         }
 
         &__rating-count {
             font-size: .8rem;
             text-transform: uppercase;
+
+            @media only screen and (max-width: $bp-small) {
+                font-size: .5rem;
+            }
         }
     }
 
@@ -308,11 +367,16 @@
             width: 1rem;
             margin-right: .7rem;
 
-            background-color: var(--color-primary);
-            mask-image: url(../img/chevron-thin-right.svg);
-            -webkit-mask-image: url(../img/chevron-thin-right.svg);
-            -webkit-mask-size: cover;
-            mask-size: cover;
+            background-image: url(../img/chevron-thin-right.svg);
+            background-size: cover;
+
+            @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+                background-color: var(--color-primary);
+                mask-image: url(../img/chevron-thin-right.svg);
+                -webkit-mask-image: url(../img/chevron-thin-right.svg);
+                -webkit-mask-size: cover;
+                mask-size: cover;
+            }
         }
     }
 
@@ -329,6 +393,10 @@
         margin-right: auto;
     }
 
+    &__friends {
+        display: flex;
+    }
+
     &__photo {
         box-sizing: content-box;
         height: 4rem;
@@ -337,7 +405,7 @@
         border: 3px solid #fff;
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -350,6 +418,11 @@
     position: relative;
     margin-bottom: 3.5rem;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         margin-bottom: 2rem;
@@ -411,6 +484,10 @@
     padding: 3.5rem 0;
     text-align: center;
     position: relative;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
 
     &__book-now {
         text-transform: uppercase;
