--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -376,6 +376,7 @@
                 -webkit-mask-image: url(../img/chevron-thin-right.svg);
                 -webkit-mask-size: cover;
                 mask-size: cover;
+                background-image: none;
             }
         }
     }
